--- a/braubar/static/css/brewboard.css
+++ b/braubar/static/css/brewboard.css
@@ -38,3 +38,14 @@ h1 {
     fill: FireBrick;
 }
 
+.head-values {
+    background-color: #ffb64d
+}
+
+.top-values {
+    font-size: 22px;
+}
+
+.top-labels {
+    font-size: 12px;
+}
