--- a/braubar/static/css/brewboard.css
+++ b/braubar/static/css/brewboard.css
@@ -1,5 +1,5 @@
 body {
-    padding-top: 50px;
+    padding-top: 0px;
 }
 
 .starter-template {
@@ -12,6 +12,7 @@ body {
 }
 
 .container {
+    width: 100%;
 }
 
 h1 {
@@ -38,8 +39,12 @@ h1 {
     fill: FireBrick;
 }
 
+.footer-values {
+    background-color: #bbb64d;
+}
+
 .head-values {
-    background-color: #ffb64d
+    background-color: #ffb64d;
 }
 
 .top-values {
@@ -48,4 +53,17 @@ h1 {
 
 .top-labels {
     font-size: 12px;
+}
+
+button.head-values  {
+    border: None;
+    background-color: #ffb64d;
+    font-size: 24px;
+    padding: 7px 10px 8px 10px;
+    }
+
+button.footer-values  {
+    border: None;
+    font-size: 20px;
+    padding: 7px 10px 8px 10px;
 }
