changed color in header and footer of status bar.

--- a/braubar/static/css/brewboard.css
+++ b/braubar/static/css/brewboard.css
@@ -67,3 +67,11 @@ button.footer-values  {
     font-size: 20px;
     padding: 7px 10px 8px 10px;
 }
+
+.row .header {
+    background-color: #ffb64d;
+}
+
+.row .footer {
+    background-color: #bbb64d;
+}
