--- a/braubar/templates/index.html
+++ b/braubar/templates/index.html
@@ -34,7 +34,7 @@
 
 <body>
 <div class="container">
-<div class="row">
+<div class="row header">
     <button id="refresh" class="head-values col-sm-1 refresh" onclick="refresh()">
         <span  class="glyphicon glyphicon-refresh"></span>
     </button>
