adds websocket server and client but:
chart creation doesn't work due to errors while reading the values
of received json from chartservice api

--- a/braubar/templates/index.html
+++ b/braubar/templates/index.html
@@ -95,6 +95,7 @@
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="/static/js/ie10-viewport-bug-workaround.js"></script>
 <script src="/static/js/d3.js"></script>
+<script type="text/javascript" src="/static/js/socket.io.min.js"></script>
 <script src="/static/js/ChartController.js"></script>
 <script src="/static/js/BrewBoard.js"></script>
 </body>
