implements websocket for index.html

--- a/braubar/static/css/brewboard.css
+++ b/braubar/static/css/brewboard.css
@@ -75,3 +75,8 @@ button.footer-values  {
 .row.footer {
     background-color: #bbb64d;
 }
+
+
+/*-- C3 Chart Line --*/
+.c3-line {
+  stroke-width: 2px; }
