--- a/braubar/templates/index.html
+++ b/braubar/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,83 +15,39 @@
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="/static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="/static/css/ie10-viewport-bug-workaround.css" rel="styleshgeet">
 
     <!-- Custom styles for this template -->
-    <link href="/static/css/c3.min.css" rel="stylesheet">
-    <link href="/static/css/brewboard.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]>
     <script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="/static/js/ie-emulation-modes-warning.js"></script>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body>
 <div class="container">
-
-
-    <div class="row footer">
-        <div class="footer-values col-sm-2">
-            <div class="footer-labels" id="timer_label">Timer:</div>
-            <div class="footer-values" id="timer_value">{{ (brew_recipe[brew_state.current_state].time - brew_state.timer_passed)/60 }}</div>
+    <div>
+        <h1>Ready Status</h1>
+        <div>Brew ID: {{brew_id}}</div>
+        <div>Powerstrip: {{powerstrip_url}}
+            {% if powerstrip_ok %}
+            <span class="label label-success">Success</span>
+            {% else %}
+            <span class="label label-danger">Danger</span>
+            {% endif %}
         </div>
-        {% for name in brew_recipe %}
-            <div class="footer-values col-sm-2">
-	        <div class="footer-labels" id="state_{{ name }}_label">{{ brew_recipe[name].name }}</div>
-		<div class="row">
-		<div class="col-sm-6">
-        	        <div class="footer-values" id="state_{{ name }}_degree">{{ brew_recipe[name].temp }}°</div>
-		</div>
-		<div class="col-sm-6">
-                {% if brew_recipe[name].auto %}
-                    <div class="footer-values" id="state_{{ name }}_time">{{ brew_recipe[name].time/60 }}</div>
-                {% endif %}
-		</div>
-		</div>
-            </div>
-        {% endfor %}
+        <div>Sensor: {{sensor_port}}</div>
+        <div>Last Brew Id: {{last_brew_id}}</div>
+        <div>New Brew ID : {{last_brew_id+1}}<input type="number" id="brew_id_field"></div>
+
+
     </div>
-
-    <div class="starter-template">
-        <div id="temp-chart">
-        </div><!-- /.temp-chart-->
-    </div><!-- /.starter-template-->
-
-
-    <div class="row header">
-        <button id="refresh" class="head-values col-sm-1 refresh">
-            <span class="glyphicon glyphicon-refresh"></span>
-        </button>
-        <div class="head-values col-sm-2">
-            <div class="top-labels" id="curent_temp_label">Temp current:</div>
-            <div class="top-values" id="current_temp_val">{{ brew_state.current_temp }}</div>
-        </div>
-        <div class="head-values col-sm-2">
-            <div class="top-labels" id="target_temp_label">Temp target:</div>
-            <div class="top-values" id="target_temp_val">{{ brew_state.target_temp }}</div>
-        </div>
-        <div class="head-values col-sm-2">
-            <div class="top-labels" id="brew_time_label">Time exceded:</div>
-            <div class="top-values" id="brew_time_val">{{ brew_state.duration }}</div>
-        </div>
-        <div class="head-values col-sm-2">
-            <div class="top-labels" id="state_label">State</div>
-            <div class="top-values" id="state_val">{{ brew_state.current_state }}</div>
-        </div>
-        <div class="head-values col-sm-2">
-            <div class="top-labels" id="temp_increase_label">Temp Increase</div>
-            <div class="top-values" id="temp_increase_val">{{ brew_state.temp_increase }}</div>
-        </div>
-        <button id="next" class="head-values col-sm-1 next">
-            <span class="glyphicon glyphicon-play"></span>
-        </button>
+    <div>
+        <form action="brewboard">
+            <input type="submit" class="btn btn-success" value="Start">
+        </form>
     </div>
 </div>
 <!-- Bootstrap core JavaScript
@@ -102,10 +58,6 @@
 <script src="/static/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="/static/js/ie10-viewport-bug-workaround.js"></script>
-<script src="/static/js/d3.js"></script>
-<script src="/static/js/c3.min.js"></script>
-<script type="text/javascript" src="/static/js/socket.io.min.js"></script>
-<script src="/static/js/ChartController.js"></script>
 <script src="/static/js/BrewBoard.js"></script>
 </body>
 </html>
