adds brew_id to socket request
Signed-off-by: Oliver Fesseler <ofesseler@gmail.com>

--- a/braubar/templates/brew.html
+++ b/braubar/templates/brew.html
@@ -36,7 +36,7 @@
 <body>
 <div class="container">
 
-
+    <div id="brew_id_1">{{ brew_id }}</div>
     <div class="row footer">
         <div class="footer-values col-sm-2">
             <div class="footer-labels" id="timer_label">Timer:</div>
